Changing span tag text

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <h5>Yutani</h5>
                         <label class="mycheckbox1">
                             <input type="checkbox" name="">
-                            <span>Finish homework</span>
+                            <span>Select</span>
                         </label>
                     </a>
                     <!-- <img src="images/cap.jpeg" alt="captain america"> -->
@@ -42,7 +42,7 @@
                         <h5>Brody</h5>
                         <label class="mycheckbox1">
                             <input type="checkbox" name="">
-                            <span>Finish homework</span>
+                            <span>Select</span>
                         </label>
                     </a>
                     <!-- <img src="images/carol.jpeg" alt="captain marvel"> -->
@@ -55,7 +55,7 @@
                     <h5>Jake</h5>
                     <label class="mycheckbox1">
                         <input type="checkbox" name="">
-                        <span>Finish homework</span>
+                        <span>Select</span>
                     </label>
                 </a>
                     <!-- <img src="images/clint.jpeg" alt="hawkeye"> -->
@@ -68,7 +68,7 @@
                         <h5>King</h5>
                         <label class="mycheckbox1">
                             <input type="checkbox" name="">
-                            <span>Finish homework</span>
+                            <span>Select</span>
                         </label>
                     </a>
                     <!-- <img src="images/hulk.jpeg" alt="hulk"> -->
